# vangja

./: .gitignore  .readthedocs.yaml  README.md  myst.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml
case_studies/: README.md  generate_tables.py  singularity.def  singularity_gpu.def  submit_ablation.slurm  submit_ablation_gpu.slurm
case_studies/smart_home/: README.md  ablation_fast.py  ablation_full.py  classical_baselines.py  metrics.csv  run.py  run_baselines.py  run_classical_baselines.py  run_prophet.py  run_timeseers.py  run_vangja.py
case_studies/smart_home/results_classical/: classical_metrics.csv  classical_summary.csv  rmse_matrix.csv
case_studies/stocks/: run.py  run_baselines.py  run_bayesian_workflow.py  run_prophet.py  run_timeseers.py  run_vangja.py
docs/: 01_getting_started.ipynb  02_inference_algorithms.ipynb  03_multi_series_fitting.ipynb  04_multi_series_caveats.ipynb  05_hierarchical_modeling.ipynb  05_transfer_learning.ipynb
docs/source/: api.rst  conf.py  index.rst  uncertainty.md
docs/source/notebooks/: 01_case_stydy_stocks.ipynb  01_getting_started.ipynb  02_case_study_smart_home.ipynb  02_case_stydy_stocks.ipynb  02_inference_algorithms.ipynb  03_multi_series_fitting.ipynb  04_multi_series_caveats.ipynb  05_hierarchical_modeling.ipynb  06_hierarchical_caveats.ipynb  07_transfer_learning.ipynb  08_prior_from_idata.ipynb  09_advanced_transfer_learning.ipynb
docs/source/notebooks/workflow/: 03_smp_convergence_summary.csv  16_stocks_model_metrics.csv  17_stocks_convergence_summary.csv
notebooks/: 01_getting_started.ipynb  02_inference_algorithms.ipynb  03_multi_series_fitting.ipynb  04_multi_series_caveats.ipynb  05_hierarchical_modeling.ipynb  06_hierarchical_caveats.ipynb  07_transfer_learning.ipynb  08_prior_from_idata.ipynb  09_advanced_transfer_learning.ipynb  10_bayesian_workflow.ipynb  testing_vangja.ipynb
src/vangja/: __init__.py  time_series.py  types.py  utils.py
src/vangja/components/: __init__.py  beta_constant.py  flat_trend.py  fourier_seasonality.py  linear_trend.py  normal_constant.py  uniform_constant.py
src/vangja/datasets/: __init__.py  loaders.py  stocks.py  synthetic.py
tests/: __init__.py  conftest.py  test_components.py  test_datasets.py  test_integration.py  test_kaggle_loaders.py  test_plot_utils.py  test_plotting.py  test_stocks.py  test_time_series.py  test_transfer_learning.py  test_types.py  test_utils.py  test_utils_extended.py
vangja/: time_series.py
vangja/components/: __init__.py  beta_constant.py  fourier_seasonality.py  linear_trend.py  uniform_constant.py
