[build-system]
requires = ["setuptools>=80.10"]
build-backend = "setuptools.build_meta"

[project]
name = "vangja"
version = "0.2.0"
description = "A time-series forecasting package with an intuitive API capable of modeling short time series with prior knowledge derived from a similar long time series."
authors = [{ name = "Jovan Krajevski", email = "jovan.krajevski@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
 "scikit-learn~=1.8.0",
 "pymc-extras==0.7.0",
 "blackjax==1.3",
]

[project.urls]
Repository = "https://github.com/jovan-krajevski/vangja"
