[build-system]
requires = ["setuptools>=80.10"]
build-backend = "setuptools.build_meta"

[project]
name = "vangja"
version = "0.2.0"
description = "A time-series forecasting package with an intuitive API capable of modeling short time series with prior knowledge derived from a similar long time series."
authors = [{ name = "Jovan Krajevski", email = "jovan.krajevski@gmail.com" }, { name = "Biljana Tojtovska Ribarski", email = "biljana.tojtovska@finki.ukim.mk" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
 "scikit-learn~=1.8.0",
 "pymc-extras==0.7.0",
 "blackjax==1.3",
]

[project.urls]
Repository = "https://github.com/jovan-krajevski/vangja"

[project.optional-dependencies]
datasets = [
    "pyreadr>=0.5",
    "yfinance>=0.2.0",
    "lxml>=4.9",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme>=1.0",
    "myst-parser>=2.0",
    "nbsphinx>=0.9",
    "pandoc>=2.3",
    "ipykernel>=6.0",
]
dev = [
    "vangja[test,docs]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
